chagne type size

--- a/_posts/2019-03-16-TIL-Mar-16th-2019.md
+++ b/_posts/2019-03-16-TIL-Mar-16th-2019.md
@@ -15,22 +15,20 @@ tags:
 
 ## Creating a Registration Page
 
-Top stack View에 만들었던 settingbutton에 addTarget 함수를 이용해 handle 함수를 추가
+Top stack View에 만들었던 settingsbutton에 **addTarget** 함수를 이용해 **handle 함수**를 추가
 
 ```swift
 topStackView.settingsButton.addTarget(self, action: #selector(handleSettings), for: .touchUpInside)
 ```
 
-
-
-새로운 viewController file 생성 (Cocoa Touch Class)
+새로운 viewController file 생성 (as Cocoa Touch Class)
 
 ```swift
 		let registrationController = RegistrationController()
         present(registrationController, animated: true)
 ```
 
-present를 사용하여 다른 controlelr를 호출한다.
+`present`를 사용하여 다른 controller를 호출한다.
 
 
 
