chagne type size

--- a/_posts/2019-03-16-TIL-Mar-16th-2019.md
+++ b/_posts/2019-03-16-TIL-Mar-16th-2019.md
@@ -34,7 +34,7 @@ topStackView.settingsButton.addTarget(self, action: #selector(handleSettings), f
 
 ### AppDelegate.swift
 
-to reduce testing time
+change rootViewController to reduce testing time
 
 ```swift
 	func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
