change type size

--- a/_posts/2019-03-16-TIL-Mar-16th-2019.md
+++ b/_posts/2019-03-16-TIL-Mar-16th-2019.md
@@ -15,28 +15,26 @@ tags:
 
 ## Creating a Registration Page
 
-Top stack View에 만들었던 settingbutton에 addTarget 함수를 이용해 handle 함수를 추가
+Top stack View에 만들었던 settingsbutton에 **addTarget** 함수를 이용해 **handle 함수**를 추가
 
 ```swift
 topStackView.settingsButton.addTarget(self, action: #selector(handleSettings), for: .touchUpInside)
 ```
 
-
-
-새로운 viewController file 생성 (Cocoa Touch Class)
+새로운 viewController file 생성 (as Cocoa Touch Class)
 
 ```swift
 		let registrationController = RegistrationController()
         present(registrationController, animated: true)
 ```
 
-present를 사용하여 다른 controlelr를 호출한다.
+`present`를 사용하여 다른 controller를 호출한다.
 
 
 
 ### AppDelegate.swift
 
-to reduce testing time
+change rootViewController to reduce testing time
 
 ```swift
 	func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
@@ -95,7 +93,7 @@ UIButton과 UITextField들을 만들어보자
 ```
 
 stackView에서 centerXAnchor는 굳이 설정하지 않아도 되는 것 같다.
-stackView는 정말 많이 쓰고 유용한 것 같다.
+stackView는 정말 많이 쓰고 유용한 것 같다!! 중요중요
 
 ```swift
     override func viewDidLoad() {
