--- a/_posts/2019-03-16-TIL-Mar-16th-2019.md
+++ b/_posts/2019-03-16-TIL-Mar-16th-2019.md
@@ -93,7 +93,7 @@ UIButton과 UITextField들을 만들어보자
 ```
 
 stackView에서 centerXAnchor는 굳이 설정하지 않아도 되는 것 같다.
-stackView는 정말 많이 쓰고 유용한 것 같다!! 중요중요
+stackView는 정말 많이 쓰고 유용한 것 같다!!
 
 ```swift
     override func viewDidLoad() {
@@ -147,10 +147,6 @@ class CustomTextField: UITextField {
 
 사용하는 이유는 anchor 코드들을 가릴 수 있기 때문이다.
 
-```
-
-```
-
 
 
 ### give Padding to TextField
@@ -195,4 +191,10 @@ cgColor 쓰는 것 잊지 말기!
 UIColor vs cgColor
 
 
+
++HW
+
+```
+
+```
 
