reset color, chagne font sizes

--- a/_posts/2019-03-16-TIL-Mar-16th-2019.md
+++ b/_posts/2019-03-16-TIL-Mar-16th-2019.md
@@ -145,13 +145,14 @@ class CustomTextField: UITextField {
 
 [관련 블로그](https://magi82.github.io/ios-intrinsicContentSize/)
 
-사용하는 이유는 anchor 코드들을 가릴 수 있기 때문이다.
+사용하는 이유는 anchor 코드들을 가릴 수 있기 때문이다. 아마 anchor 코드가 복잡하고 실수하기 쉬워서 그런 것 같다.
 
 
 
 ### give Padding to TextField
 
-editrect, textrect
+editrect, textrect으로 호출하면 쉽다
+{: .
 
 #### textRect(forBounds:)
 
