change docs font-size

--- a/_posts/2019-03-16-TIL-Mar-16th-2019.md
+++ b/_posts/2019-03-16-TIL-Mar-16th-2019.md
@@ -204,8 +204,6 @@ Gradient는 항상 Layer이며 색깔과 위치를 array로 준다. Color Litera
     }
 ```
 
-
-
 cgColor 쓰는 것 잊지 말기!
 
 UIColor vs cgColor
@@ -214,7 +212,16 @@ UIColor vs cgColor
 
 +HW
 
-```
-
+```swift
+	let registerButton: UIButton = {
+        let button = UIButton(type: .system)
+        button.setTitle("Register", for: .normal)
+        button.setTitleColor(.white, for: .normal)
+        button.titleLabel?.font = UIFont.systemFont(ofSize: 18, weight: .bold)
+        button.backgroundColor = #colorLiteral(red: 0.8078431487, green: 0.02745098062, blue: 0.3333333433, alpha: 1)
+        button.layer.cornerRadius = 25
+        button.heightAnchor.constraint(equalToConstant: 50).isActive = true
+        return button
+    }()
 ```
 
