fix: code error with image

--- a/_posts/2019-03-17-TIL-Mar-17th-2019#1.md
+++ b/_posts/2019-03-17-TIL-Mar-17th-2019#1.md
@@ -92,17 +92,11 @@ An abstract interface for responding to and handling events.
 
 print(notification) in handleKeyboardShow
 
-```swift
-name = UIKeyboardWillShowNotification, object = nil, userInfo = Optional([AnyHashable("UIKeyboardFrameEndUserInfoKey"): NSRect: {{0, 477}, {375, 335}}, AnyHashable("UIKeyboardAnimationCurveUserInfoKey"): 7, AnyHashable("UIKeyboardBoundsUserInfoKey"): NSRect: {{0, 0}, {375, 335}}, AnyHashable("UIKeyboardIsLocalUserInfoKey"): 1, AnyHashable("UIKeyboardFrameBeginUserInfoKey"): NSRect: {{0, 812}, {375, 335}}, AnyHashable("UIKeyboardCenterEndUserInfoKey"): NSPoint: {187.5, 644.5}, AnyHashable("UIKeyboardAnimationDurationUserInfoKey"): 0.25, AnyHashable("UIKeyboardCenterBeginUserInfoKey"): NSPoint: {187.5, 979.5}])
-```
+<img src="/assets/images/til-mar-17-1.png" alt="">
 
 print(notification.userInfo)
 
-```swift
-Optional([AnyHashable("UIKeyboardCenterBeginUserInfoKey"): NSPoint: {187.5, 979.5}, AnyHashable("UIKeyboardAnimationCurveUserInfoKey"): 7, AnyHashable("UIKeyboardIsLocalUserInfoKey"): 1, AnyHashable("UIKeyboardBoundsUserInfoKey"): NSRect: {{0, 0}, {375, 335}}, AnyHashable("UIKeyboardFrameBeginUserInfoKey"): NSRect: {{0, 812}, {375, 335}}, AnyHashable("UIKeyboardAnimationDurationUserInfoKey"): 0.25, AnyHashable("UIKeyboardCenterEndUserInfoKey"): NSPoint: {187.5, 644.5}, AnyHashable("UIKeyboardFrameEndUserInfoKey"): NSRect: {{0, 477}, {375, 335}}])
-```
-
-
+<img src="/assets/images/til-mar-17-2.png" alt="">
 
 여기서 `UIKeyboardCenterEndUserInfoKey`만 사용하기를 원한다.
 
