--- a/_posts/2019-03-17-TIL-Mar-17th-2019.md
+++ b/_posts/2019-03-17-TIL-Mar-17th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL March 17th 2019 #1"
+title: "TIL March 17th 2019"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
