--- a/_posts/2019-03-21-TIL-Mar-21th-2019.md
+++ b/_posts/2019-03-21-TIL-Mar-21th-2019.md
@@ -15,7 +15,11 @@ tags:
 
 
 - assert ,guard
-- 
+- Bindable
+- UIImagePickerController
+- protocols for UIImagePickerController
+
+
 
 ## assert, guard
 
@@ -105,3 +109,247 @@ someFunction(info: ["name": "Mike"])
 someFunction(info: ["name: "Yagom", "age": 10])
 ```
 
+---
+
+
+
+### Shortcuts For Xcode
+
+[My Favorite Xcode 8 Shorcuts by Bob Lee](https://blog.bobthedeveloper.io/bobs-favorite-xcode-8-shortcuts-part-1-3-36381e07284d)
+
+#### Hide Panels
+
+```
+Command 0(Left)
+Command Option 0(Right)
+Command Shift Y(Bottom)
+```
+
+
+
+#### Bindable
+
+RxSwift, RxJava, RxCocoa
+
+Assist View State Observation
+
+
+
+### imagePicker
+
+```swift
+    @objc fileprivate func handleSelectPhoto() {
+        let imagePickerController = UIImagePickerController()
+        imagePickerController.delegate = self
+        present(imagePickerController, animated: true)
+    }
+```
+
+```swift
+        imagePickerController.delegate = self
+```
+
+delegate에 self(registrationController)를 할당하기 위해서는 protocol을 사용해야한다.
+
+Cannot assign value of type 'RegistrationController' to type '(UIImagePickerControllerDelegate & UINavigationControllerDelegate)?'
+Insert ' as! UIImagePickerControllerDelegate & UINavigationControllerDelegate'
+{: .notice--danger}
+
+
+
+```swift
+extension RegistrationController: UIImagePickerControllerDelegate, UINavigationControllerDelegate {
+    
+}
+```
+
+
+
+```swift
+extension RegistrationController: UIImagePickerControllerDelegate, UINavigationControllerDelegate {
+    
+    func imagePickerController(_ picker: UIImagePickerController, didFinishPickingMediaWithInfo info: [UIImagePickerController.InfoKey : Any]) {
+        let image = info[.originalImage] as? UIImage
+        self.selectPhotoButton.setImage(image?.withRenderingMode(.alwaysOriginal), for: .normal)
+        dismiss(animated: true, completion: nil)
+    }
+    
+    func imagePickerControllerDidCancel(_ picker: UIImagePickerController) {
+        dismiss(animated: true)
+    }
+}
+```
+
+
+
+```swift
+	self.selectPhotoButton.setImage(image?.withRenderingMode(.alwaysOriginal), for: .normal)
+```
+
+if you miss the `withRederingMode(.alwaysOriginal)` the image will be seen as just blue box
+
+
+
+```swift
+// in SelectPhotoButton
+button.imageView?.contentMode = .scaleAspectFill
+button.clipsToBounds = true
+```
+
+perfect
+
+---
+
+
+
+### RegistrationViewModel
+
+there are 3 properties now. but this ViewModel is supposed to reflect what's going on inside our registrationController.
+
+It is not enable to keep tracking the image (3 properties are enable)
+
+So make a new property
+
+```swift
+    var image: UIImage?
+```
+
+
+
+in RegistrationController.swift
+
+```swift
+func imagePickerController(~~) {
+ 	...
+  registrationViewModel.image = image 
+  ...
+}
+```
+
+
+
+```swift
+    var image: UIImage? {
+        didSet {
+            imageObserver?(image)
+        }
+    }
+    
+    var imageObserver: ((UIImage?) -> ())?
+```
+
+이전에 `isFormValidObserver`와 같이 `didSet`과 `observer`를 만들어준다.
+
+
+
+`func imagePickerController`에 있던 `SelectPhotoButton`의 실질적인 `image`를 바꿔주는 코드를 `setupRegistrationViewModelObserver`로 옮겨준다.
+
+```swift
+registrationViewModel.imageObserver = { [unowned self] img in
+            self.selectPhotoButton.setImage(img?.withRenderingMode(.alwaysOriginal), for: .normal)
+        }
+```
+
+
+
+### bindable
+
+in ViewModel, we have two observers
+
+didSet과 Observer를 사용하는 이러한 방식의 concept는 bindable이라고 한다.
+
+```swift
+class Bindable<T> {
+    var value: T? {
+        didSet {
+            observer?(value)
+        }
+    }
+    
+    var observer: ((T?)->())?
+    
+    func bind(observer: @escaping (T?) -> ()) {
+        self.observer = observer
+    }
+}
+```
+
+
+
+Bind?!
+
+```swift
+    var bindableImage = Bindable<UIImage>()
+
+//    var image: UIImage? {
+//        didSet {
+//            imageObserver?(image)
+//        }
+//    }
+//
+//    var imageObserver: ((UIImage?) -> ())?
+```
+
+Bindable을 사용하여 이러한 컨셉들의 코드들을 단축시킬 수 있다. for reactive programming
+
+
+
+registrationController.swift
+
+```swift
+// func imagePickerController(~~)
+        registrationViewModel.bindableImage.value = image
+//        registrationViewModel.image = image
+```
+
+```swift
+// setupRegistrationViewModelObserver()
+        registrationViewModel.bindableImage.bind { (img) in
+            self.selectPhotoButton.setImage(img?.withRenderingMode(.alwaysOriginal), for: .normal)
+        }
+```
+
+
+
+using bindable for isFormValid in ViewModel
+
+```
+	var bindableIsFormValid = Bindable<Bool>()
+```
+
+
+
+```swift
+// 		func checkFormValidity()
+        bindableIsFormValid.value = isFormValid
+```
+
+bindable value를 바꿔주면 didSet에서 observer를 실행한다는 점을 잊지말자!
+
+
+
+```swift
+registrationViewModel.bindableIsFormValid.bind { [unowned self] (isFormValid) in
+            guard let isFormValid = isFormValid else { return }
+            self.registerButton.isEnabled = isFormValid
+            self.registerButton.backgroundColor = isFormValid ? #colorLiteral(red: 0.8078431487, green: 0.02745098062, blue: 0.3333333433, alpha: 1) : .lightGray
+            self.registerButton.setTitleColor(isFormValid ? .white : .darkGray, for: .normal)
+        }
+```
+
+guard를 활용한 optional binding
+
+
+
+some refactoring
+
+```swift
+self.registerButton.backgroundColor = isFormValid ? #colorLiteral(red: 0.8078431487, green: 0.02745098062, blue: 0.3333333433, alpha: 1) : .lightGray
+            self.registerButton.setTitleColor(isFormValid ? .white : .darkGray, for: .normal)
+```
+
+
+
+### After running
+
+when keyboard shows up transforming doesn't work.! Why?
