update: post-march 21th TIL

--- a/_posts/2019-03-21-TIL-Mar-21th-2019.md
+++ b/_posts/2019-03-21-TIL-Mar-21th-2019.md
@@ -353,3 +353,16 @@ self.registerButton.backgroundColor = isFormValid ? #colorLiteral(red: 0.8078431
 ### After running
 
 when keyboard shows up transforming doesn't work.! Why?
+
+
+
+it was because of `removeObserver()` in `viewWillDisappear`
+so, I moved `setupNotificationObservers()` to `viewWillAppear()`, It works perfectly
+
+[ViewController Life-Cycle](https://zeddios.tistory.com/43) 
+
+[The App Life Cycle](https://developer.apple.com/library/archive/documentation/iPhone/Conceptual/iPhoneOSProgrammingGuide/TheAppLifeCycle/TheAppLifeCycle.html)
+
+
+
+I need to make an issue list on github!
