--- a/_posts/2019-03-23-TIL-Mar-23th-2019#3.md
+++ b/_posts/2019-03-23-TIL-Mar-23th-2019#3.md
@@ -14,6 +14,14 @@ tags:
 
 
 
+- RootViewController
+- Firestore().collection() - snapshot.documents
+- Refactoring for firebase datas
+- Correct CardView
+- Optional binding for using properties
+
+
+
 Set `rootViewcontroller` as `HomeController()`
 
 ```swift
