post: TIL March 24th

--- a/_posts/2019-03-24-TIL-Mar-24th-2019.md
+++ b/_posts/2019-03-24-TIL-Mar-24th-2019.md
@@ -9,8 +9,101 @@ categories:
   - TIL
 tags:
   - iOS
-  - Swift
 ---
+
+
+
+- query
+
+
+
+rename `setupDummyCards()` to `setupFirestoreUserCards()`
+
+```swift
+        let query = Firestore.firestore().collection("users")
+        query.getDocuments { (snapshot, err) in
+            if let err = err {
+```
+
+
+
+```swift
+.whereField("age", isEqualTo: 26)
+```
+
+```swift
+.whereField("profession", isEqualTo: "Student")
+```
+
+```swift
+.whereField("age", isLessThan: 31).whereField("age", isGreaterThan: 24)
+```
+
+
+
+profession과 age 두개 사용은 에러를 반환한다.
+
+
+
+```swift
+        let query = Firestore.firestore().collection("users")
+            .whereField("age", isLessThan: 31)
+            .whereField("age", isGreaterThan: 24)
+            .whereField("friends", arrayContains: "동준")
+```
+
+it doesn't work
+
+```
+// ERROR
+"The query requires an index. You can create it here: https://console.firebase.google.com/project/tinderswipematchfirestor-afc99/database/firestore/indexes?
+```
+
+
+
+```swift
+        let query = Firestore.firestore().collection("users")
+            .whereField("friends", arrayContains: "동준")
+```
+
+it works
+
+
+
+### Imgae transparent bug
+
+```swift
+    var imageIndexObserver: ((Int, String?) -> ())?
+```
+
+
+
+```swift
+    fileprivate var imageIndex = 0 {
+        didSet {
+            let imageUrl1 = imageNames[imageIndex]
+//            let image = UIImage(named: imageName)
+            imageIndexObserver?(imageIndex, imageUrl1)
+        }
+    }
+```
+
+
+
+```swift
+    fileprivate func setupImageIndexObserver() {
+        cardViewModel.imageIndexObserver = { [weak self] (index, imageUrl) in
+            if let url = URL(string: imageUrl ?? "") {
+                self?.imageView.sd_setImage(with: url)
+            }
+            
+            self?.barsStackView.arrangedSubviews.forEach({ (v) in
+                v.backgroundColor = self?.barDeselectedColor
+            })
+            self?.barsStackView.arrangedSubviews[index].backgroundColor = .white
+        }
+    }
+```
 
 
 
