post: TIL March 28th

--- a/_posts/2019-03-27-TIL-Mar-27th-2019 copy.md
+++ b/_posts/2019-03-27-TIL-Mar-27th-2019 copy.md
@@ -205,3 +205,14 @@ Array(array[arr[0] - 1...arr[1] - 1])
 
 이렇게 Array로 감싸버리면 된다. (다른 사람 코드 참고)
 
+
+
+위를 참고하여 리팩토링 진행
+
+```swift
+        var slicedArray = Array(array[arr[0] - 1...arr[1] - 1])
+        slicedArray.sort()
+        resultArr.append(slicedArray[arr[2] - 1])
+```
+
+더 빨라진 느낌!
