--- a/_posts/2019-03-29-TIL-Mar-29th-2019.md
+++ b/_posts/2019-03-29-TIL-Mar-29th-2019.md
@@ -22,6 +22,10 @@ tags:
 
 
 
+### SettingsController.swift
+
+##### in viewDidLoad()
+
 ```swift
 navigationItem.title = "Settings"
 navigationController?.navigationBar.prefersLargeTitles = true
@@ -47,7 +51,7 @@ A **container view** controller that defines a stack-based scheme for navigating
 
 
 
-### navigationItem
+### set up navigationItem
 
 ```swift
     fileprivate func setupNavigationItems() {
@@ -103,7 +107,7 @@ in override
 
 ### creating UIButton with lazy var
 
-use **lazy var** to fix declaration problems
+use **lazy var** because of declaration problem
 
 ```swift
     lazy var image1Button = createButton()
@@ -141,7 +145,7 @@ header section
         image1Button.widthAnchor.constraint(equalTo: header.widthAnchor, multiplier: 0.45).isActive = true
 ```
 
-just set header's backgroundColor as some color to check where it is.
+just set up header's backgroundColor as some color to check where it is.
 give constratins to button in header
 
 
@@ -162,9 +166,10 @@ give constratins to button in header
 
 ### imagePickerView
 
-what does **button parameter** do?
+How does **handleSelectPhoto's parameter** work??
 
-everytime we tap each button, `button parameter` pass button's memory address
+beverytime we tap each button, `button parameter` pass button's memory address
+I guess when we doesn't specify parameter using the function, object that invokes the function would be passed as a parameter of the function.
 
 ```swift
     @objc fileprivate func handleSelectPhoto(button: UIButton) {
@@ -177,13 +182,27 @@ everytime we tap each button, `button parameter` pass button's memory address
 
 
 
+### imagePicker.delegate
 
+#### Summary
+
+The image picker’s delegate object.
+
+#### Discussion
+
+The delegate receives **notifications** when the **user picks** an image or movie, or exits the picker interface. The delegate also decides when to dismiss the picker interface, so you must provide a delegate to use a picker. If this property is `nil`, **the picker is dismissed immediately if you try to show it.**
+
+For information about the methods you can implement for your delegate object, see [UIImagePickerControllerDelegate](apple-reference-documentation://hs4c4RTKv5).
 
 ```swift
 imagePicker.delegate = self
 ```
 
-that code above doesn't compile until we specify some protocols
+self is `SettingsController`
+
+
+
+that code above doesn't compile until we specify two protocols below.
 
 ```swift
 UIImagePickerControllerDelegate, UINavigationControllerDelegate
@@ -191,7 +210,7 @@ UIImagePickerControllerDelegate, UINavigationControllerDelegate
 
 
 
-this function will invoked when we pick a photo in UIImagePickerVIewController
+this function will be invoked when we pick a photo in UIImagePickerVIewController
 
 ```swift
     func imagePickerController(_ picker: UIImagePickerController, didFinishPickingMediaWithInfo info: [UIImagePickerController.InfoKey : Any]) {
@@ -208,7 +227,7 @@ this function will invoked when we pick a photo in UIImagePickerVIewController
 
 ### CustomImagePickerController
 
-`CustomImagePickerController` need to have a **UIButton** property
+We can extend UIImagePickerController as `CustomImagePickerController`. It would have a **UIButton** property
 
 ```swift
 class CustomImagePickerController: UIImagePickerController {
@@ -218,9 +237,8 @@ class CustomImagePickerController: UIImagePickerController {
 
 
 
-Every time we invoke `handleSelectPhoto(button: UIButton)`, CustomImagePickerController is generated
-
-
+Every time we invoke `handleSelectPhoto(button: UIButton)`, CustomImagePickerController is generated.
+we can set the property(UIButton) from parameter
 
 ```swift
     @objc fileprivate func handleSelectPhoto(button: UIButton) {
