update: TIL Apr 3rd

--- a/_posts/2019-04-02-TIL-Apr-2nd-2019.md
+++ b/_posts/2019-04-02-TIL-Apr-2nd-2019.md
@@ -47,6 +47,9 @@ implement func `handleSave()` as a selector of `save button`
     }
 ```
 
+The argument type of setData() is Dictionary
+{: .notice--info}
+
 
 
 여기서 만들어지는 dictionary를 바로 저장시킬 수는 없다. 그래서 예시로 임의의 값을 수동으로 넣어준다.
