update: til apr 24th

--- a/_posts/2019-04-24-TIL-Apr-24th-2019.md
+++ b/_posts/2019-04-24-TIL-Apr-24th-2019.md
@@ -40,13 +40,19 @@ Adds an entry to the notification center's dispatch table with an observer and a
 
 
 
+#### Observer - View Life Cycle
+
+You can just put them on `viewDidLoad()` at first but viewDidLoad is invoked only when the viewController is loaded. because of it is observer, it should be removed someday. So we need to addObserver in `viewWillAppear` and remove observer in `viewWillDisappear`
+
+
+
 ### notification
 
 `notification.userInfo` : Storage for values or objects related to this notification.
 
 the result of `print(notification.userInfo)`
 
-<img src="assets/images/til-mar-24-1.png" alt="">
+<img src="assets/images/til-apr-24-1.png" alt="apr-24-1">
 
 
 
