--- a/_posts/2019-04-26-TIL-Apr-26th-2019.md
+++ b/_posts/2019-04-26-TIL-Apr-26th-2019.md
@@ -15,10 +15,31 @@ tags:
 
 
 1. Bindable
+2. LoginControllerDelegate
 
 
 
-- `addObserver` in
+Bindable은 reactive programming을 위해 필요하다.
+
+```swift
+class Bindable<T> {
+    var value: T? {
+        didSet {
+            observer?(value)
+        }
+    }
+    
+    var observer: ((T?)->())?
+    
+    func bind(observer: @escaping (T?) ->()) {
+        self.observer = observer
+    }
+    
+}
+```
+
+didSet과 observer 클로저 개념을 사용하여 reactive programming을 할 수 있다. Bindable을 사용하지 않아도 구현할 수 있지만 Bindable class를 사용하면 더 깔끔하게 구현할 수 있다.
 
 
 
+Bindable.bind로 observer를 선언해줄 때, retain cycle을 방지하기 위해서 [unowned self]를 항상 선언해줘야한다.
