post: til apr 26th

--- a/_posts/2019-04-24-TIL-Apr-24th-2019.md
+++ b/_posts/2019-04-24-TIL-Apr-24th-2019.md
@@ -31,7 +31,7 @@ tags:
 
 Adds an entry to the notification center's dispatch table with an observer and a notification selector, and an optional notification name and sender.
 
-#### NotificationCenter.default
+### NotificationCenter.default
 
 ```swift
         NotificationCenter.default.addObserver(self, selector: #selector(handleKeyboardShow), name: UIResponder.keyboardWillShowNotification, object: nil)
@@ -40,7 +40,7 @@ Adds an entry to the notification center's dispatch table with an observer and a
 
 
 
-#### Observer - View Life Cycle
+### Observer - View Life Cycle
 
 You can just put them on `viewDidLoad()` at first but viewDidLoad is invoked only when the viewController is loaded. because of it is observer, it should be removed someday. So we need to addObserver in `viewWillAppear` and remove observer in `viewWillDisappear`
 
@@ -74,9 +74,9 @@ let keyboardFrame = value.cgRectValue
 
 
 
-### How to transform View
+## How to transform View
 
-#### CGAffineTransform
+### CGAffineTransform
 
 An affine transformation matrix for use in drawing 2D graphics
 
@@ -86,7 +86,7 @@ view.transform = CGAffineTransform(translationX: 0, y: -difference - 16)
 
 
 
-#### UIResponder
+### UIResponder
 
 An abstract interface for responding to and handling events.
 
