post: til may 7th

--- a/_posts/2019-04-26-TIL-Apr-26th-2019.md
+++ b/_posts/2019-04-26-TIL-Apr-26th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL Apr 26th 2019 - Bindable"
+title: "TIL Apr 26th 2019 - Bindable, delegate"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
