change: title names, font-size

--- a/_posts/2019-05-09-TIL-May-9th-2019.md
+++ b/_posts/2019-05-09-TIL-May-9th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL May 9th 2019 - pageUIViewController"
+title: "TIL May 9th 2019 - UIPageViewController"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
@@ -15,6 +15,8 @@ tags:
 
 
 1. UIPageViewController
+
+Let's dig up the UIPageController!
 
 
 
