--- a/_posts/2019-05-22-TIL-May-22th-2019.md
+++ b/_posts/2019-05-22-TIL-May-22th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL May 22th 2019 - pageUIViewController"
+title: "TIL May 22th 2019 - CABasicAnimation, LinkedList"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
@@ -16,6 +16,7 @@ tags:
 
 1. remove scroll in UIPageViewController
 2. LinkedList
+3. CABasicAnimation
 
 
 
