--- a/_posts/2019-05-22-TIL-May-22th-2019.md
+++ b/_posts/2019-05-22-TIL-May-22th-2019.md
@@ -14,13 +14,32 @@ tags:
 
 
 
-1. remove scroll in UIPageViewController
+1. cardViewMode
+   - remove scroll in UIPageViewController
 2. LinkedList
 3. CABasicAnimation
+4. fix a bug with a trick
+
+
+
+#### cardViewMode
+
+add init function in `customUIPageViewController`
+
+```swift
+    // custom initializer
+    init(isCardViewMode: Bool = false) {
+        self.isCardViewMode = isCardViewMode
+        super.init(transitionStyle: .scroll, navigationOrientation: .horizontal)
+    }
+```
 
 
 
 #### How to remove scroll in UIPageViewController
+
+we don't need a scroll function in CardView, only need it in UserDetailViewController.
+So all we need to do is setting each subview's `isScrollEnabled` on false
 
 ```swift
     fileprivate func disableSwipingAbility() {
@@ -37,7 +56,33 @@ tags:
 #### LinkedList in CardView
 
 ```swift
+// in CardView.swift
     var nextCardView
+```
+
+
+
+set nextCardView when fetch Users from firestore
+
+```swift
+// in HomeController.swift
+// fetchUsersFromFirestore()
+            var previousCardView: CardView?
+
+            snapshot?.documents.forEach({ (documentSnapshot) in
+                let userDictionary = documentSnapshot.data()
+                let user = User(dictionary: userDictionary)
+                if user.uid != Auth.auth().currentUser?.uid {
+                    let cardView = self.setupCardFromUser(user: user)
+                    
+                    previousCardView?.nextCardView = cardView
+                    previousCardView = cardView
+                    
+                    if self.topCardView == nil {
+                        self.topCardView = cardView
+                    }
+                }
+            })
 ```
 
 
@@ -46,7 +91,20 @@ tags:
 
 use delegate of CardView
 
-We have already used `didTapMoreInfo` in CardView-HomeController
+We have already specified protocol `CardViewDelegate`,  `didTapMoreInfo` between CardView and HomeController
+
+specify `didRemoveCard(cardView: CardView)` in `CardViewDelegate`
+
+```swift
+protocol CardViewDelegate {
+    func didTapMoreInfo(cardViewModel: CardViewModel)
+    func didRemoveCard(cardView: CardView)
+}
+```
+
+
+
+call `didRemoveCard` on Completing swiping a cardView
 
 ```swift
 self.delegate?.didRemoveCard(cardView: self)
@@ -56,13 +114,34 @@ self.delegate?.didRemoveCard(cardView: self)
 
 #### Change animation type to fix bug
 
-CABasicAnimation()
+create an animation with CABasicAnimation(), watch out a `keypath`!
 
+```swift
+    fileprivate func performSwipeAnimation(traslation: CGFloat, angle: CGFloat) {
+        let duration = 0.5
+        let translationAnimation = CABasicAnimation(keyPath: "position.x")
+        
+        translationAnimation.toValue = traslation
+        translationAnimation.duration = duration
+        translationAnimation.fillMode = .forwards
+        translationAnimation.timingFunction = CAMediaTimingFunction(name: .easeOut)
+        translationAnimation.isRemovedOnCompletion = false
+        
+        let rotationAnimation = CABasicAnimation(keyPath: "transform.rotation.z")
+        rotationAnimation.toValue = angle * CGFloat.pi / 180
+        rotationAnimation.duration = duration
+        
+        CATransaction.setCompletionBlock {
+            topCardView?.removeFromSuperview()
+            
+        }
+        
+        topCardView?.layer.add(translationAnimation, forKey: "translation")
+        topCardView?.layer.add(rotationAnimation, forKey: "rotation")
+        
+        CATransaction.commit()
+    }
 ```
-
-```
-
-
 
 
 
@@ -77,6 +156,8 @@ CABasicAnimation()
 #### fix: tap likeButton rapidly
 
 we need a trick
+
+change topCardView to nextCardView tapping a button
 
 ```swift
         let cardView = topCardView
@@ -93,11 +174,10 @@ we need a trick
 
 
 
-Refactoring
+Refactoring by `toValue`
 
 
 
 #### save in settingsController bug
 
 set topCardView as nil in `fetchUsersFromFirestore()`
-
