post: TIL May 24th

--- a/_posts/2019-05-22-TIL-May-22th-2019.md
+++ b/_posts/2019-05-22-TIL-May-22th-2019.md
@@ -14,11 +14,11 @@ tags:
 
 
 
-1. cardViewMode
-   - remove scroll in UIPageViewController
-2. LinkedList
-3. CABasicAnimation
-4. fix a bug with a trick
+1. **cardViewMode**
+   - **remove scroll in UIPageViewController**
+2. **LinkedList**
+3. **CABasicAnimation**
+4. **fix a bug with a trick**
 
 
 
