post: TIL May 29th
gradient button, gradient border button

--- a/_posts/2019-05-26-TIL-May-26th-2019.md
+++ b/_posts/2019-05-26-TIL-May-26th-2019.md
@@ -14,7 +14,7 @@ tags:
 
 
 
-1. Detect match everytime we swipe a card
+1. Detect a match everytime we swipe a card
 2. Remove cards we swiped before
 
 
