--- a/_posts/2019-05-29-TIL-May-29th-2019.md
+++ b/_posts/2019-05-29-TIL-May-29th-2019.md
@@ -76,7 +76,7 @@ class SendMessageButton: UIButton {
 
 
 {: .notice--warning}
-When you want to make a corner round, half of height of the rect have to be cornerRadius
+When you want to make a corner round, a half of height of the rect as a cornerRadius value would be nice!
 
 
 
