post: TIL June 1st
Keyframes animations, fetching info in animations

--- a/_posts/2019-05-29-TIL-May-29th-2019.md
+++ b/_posts/2019-05-29-TIL-May-29th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL May 29th 2019 - UIVisualEffectView, Animations"
+title: "TIL May 29th 2019 - UIVisualEffectView, Gradient BG Button"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
