post: TIL June 1st
Keyframes animations, fetching info in animations

--- a/_posts/2019-06-01-TIL-June-1st-2019.md
+++ b/_posts/2019-06-01-TIL-June-1st-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL June 1st 2019 - Keyframes Animations, Fetching info on match view"
+title: "TIL June 1st 2019 - Keyframes Animations, Fetching info in animations"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
@@ -89,10 +89,11 @@ Specifies the timing and animation values for a single frame of a keyframe anima
 
 
 
-### Fetching info on animations
+### Fetching info in animations
 
 1. Think "How can I pass the `user` or `user's uid` to `view`??" -> Data
 2. Using `didset` when you get passed `user` or `user's uid`
+3. Give attention to **where fetching should be located**
 
 
 
@@ -113,8 +114,9 @@ set up animations after complete `sd_setImage`
                 
                 guard let dictionary = snapshot?.data() else { return }
                 let cardUser = User(dictionary: dictionary)
-                guard let url = URL(string: cardUser.imageUrl1 ?? "") else { return }
-                self.cardUserImageView.sd_setImage(with: url)
+                                                                                     
+                guard let cardUserImageUrl = URL(string: cardUser.imageUrl1 ?? "") else { return }
+                self.cardUserImageView.sd_setImage(with: cardUserImageUrl)
                 self.discriptionLable.text = "You and \(cardUser.name ?? "") liked\neach other"
                 
                 guard let currentUserImageUrl = URL(string: self.currentUser.imageUrl1 ?? "") else { return }
