post: June 13th

--- a/_posts/2019-06-10-TIL-June-10th-2019.md
+++ b/_posts/2019-06-10-TIL-June-10th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL June 10th 2019 - Save new info to firestorm"
+title: "TIL June 10th 2019 - Using new data on firebase"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
