edit: June 13th

--- a/_posts/2019-06-13-TIL-June-13th-2019.md
+++ b/_posts/2019-06-13-TIL-June-13th-2019.md
@@ -26,7 +26,7 @@ tags:
 ### Using UITextView
 
 {: .notice--info}
-`Using LBTAListController` currently!
+Using `LBTAListController` currently!
 
 
 
@@ -213,5 +213,33 @@ struct Message {
     let text: String
     let isFromCurrentLoggedUser: Bool
 }
+```
+
+
+
+### Refactoring
+
+**Message** : Model
+
+**MessageCell** : View
+
+
+
+Extract method in ChatLogController
+
+```swift
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        
+        items = [
+            //...
+        ]
+        
+        setupUI()
+    }
+    
+    fileprivate func setupUI() {
+        //...
+    }
 ```
 
