post: hackathon retrospective

--- a/_posts/2019-06-27-TIL-June-27th-2019.md
+++ b/_posts/2019-06-27-TIL-June-27th-2019.md
@@ -64,6 +64,10 @@ A Boolean value that determines whether the stack view lays out its arranged vie
 
 
 
+#### [알아두면 유용한 iOS의 LayoutMargins를 소개합니다! by 김태완 in Realm](https://academy.realm.io/kr/posts/ios-layoutmargins/)
+
+
+
 #### Declaration
 
 ```
