--- a/_posts/2019-09-30-TIL-Sep-30th-2019.md
+++ b/_posts/2019-09-30-TIL-Sep-30th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL Sep 25th 2019 - Tinder & Git"
+title: "TIL Sep 30th 2019"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
@@ -16,3 +16,4 @@ tags:
 
 
 Staging Area 생략하기
+
