edit: TIL Oct 18th

--- a/_posts/2019-10-18-TIL-Oct-18th-2019.md
+++ b/_posts/2019-10-18-TIL-Oct-18th-2019.md
@@ -36,12 +36,28 @@ collectionView에서 Custom Cell을 사용하는 방법은 다음과 같다.
 
 사용할 Custom Cell에 대해서 identifier를 설정한다.
 
-스토리보드에서는 직접 Identifier를 설정해주고
-programmatically하게는 collectionView에서 String값을 identifier로 등록한다.
+스토리보드에서는 직접 Attributes Inspector에서 Identifier를 설정해준다.
+
+programmatically(스토리보드를 사용하지 않으면) collectionView를 선언한 ViewController에서 String type property로 identifier로 register함수를 통해 등록한다.
+
+
+
+> register
+
+Document에는 다음과 같이 register함수를 설명했다.
+
+Register a **class** for use in creating new collection view cells. 
+
+즉 class를 등록하는 것이다. register 함수의 첫번째 인자로는 cellClass가 들어간다.
 
 ```swift
-collectionView.register(T.self, forCellWithReuseIdentifier: cellId)
+    fileprivate let cellId = "cellId"
+
+    // viewDidLoad()
+    collectionView.register(T.self, forCellWithReuseIdentifier: cellId)
 ```
+
+LBTAListController에서는 제네릭으로 선언되어있는 T type이 사용되었다.
 
 
 
@@ -60,6 +76,8 @@ collecionView에서도 tableView와 마찬가지로 cell들을 dequeue해서 재
     }
 ```
 
+dequeuing 할 때에는 type casting은 필수이다! `as!`
+
 
 
 ```swift
@@ -67,6 +85,10 @@ cell.parentController = self
 ```
 
 parentController is set to the ListHeaderController that is rendering this cell. This is useful for scenarios where a cell contains a UIButton and you want to use addTarget(…) to trigger an action in the controller.
+
+추후에 UIButton을 cell에 추가할 때 addTarget을 사용하여 UIButton의 action을 처리할 때 편리하게 사용하기 위한 것.
+
+또한 이 `parentController` 는 optional로 `LBTAListCell`에 선언되어있다.
 
 
 
@@ -85,6 +107,8 @@ class RecentMessageCell: LBTAListCell<UIColor> {
     }
 }
 ```
+
+didSet을호 생성된 item객체들을 모두 처리하여 cell로 만들어준다. collectionViewCell의 initializer 같은 역할을 한다.
 
 
 
@@ -115,7 +139,51 @@ collectionView.contentInset.top 과 collectionView.scrollIndicatorInsets.top은 
 
 
 
-> 세부 구현 내용
+> **LBTAListCell** 세부 구현 내용
+
+```swift
+open class LBTAListCell<T>: UICollectionViewCell {
+    
+    /// item is fed in automatically from ListHeaderController
+    open var item: T!
+    
+    /// parentController is set to the ListHeaderController that is rendering this cell.  This is useful for scenarios where a cell contains a UIButton and you want to use addTarget(...) to trigger an action in the controller.
+    open weak var parentController: UIViewController?
+    
+    /// 90% of lists need a separator line
+    public let separatorView = UIView(backgroundColor: UIColor(white: 0.6, alpha: 0.5))
+    
+    /// This convenience method sets up the separate line with some left padding
+    open func addSeparatorView(leftPadding: CGFloat = 0) {
+        addSubview(separatorView)
+        separatorView.anchor(top: nil, leading: leadingAnchor, bottom: bottomAnchor, trailing: trailingAnchor, padding: .init(top: 0, left: leftPadding, bottom: 0, right: 0), size: .init(width: 0, height: 0.5))
+    }
+    /// This sets up the separator to be anchored to some leading anchor
+    open func addSeparatorView(leadingAnchor: NSLayoutXAxisAnchor) {
+        addSubview(separatorView)
+        separatorView.anchor(top: nil, leading: leadingAnchor, bottom: bottomAnchor, trailing: trailingAnchor, size: .init(width: 0, height: 0.5))
+    }
+    
+    override public init(frame: CGRect) {
+        super.init(frame: frame)
+        backgroundColor = .white
+        setupViews()
+    }
+    
+    /// In your custom ListCell classes, just override setupViews() to provide custom behavior.  We do this to avoid overriding init methods.
+    open func setupViews() {}
+    
+    required public init?(coder aDecoder: NSCoder) {
+        fatalError()
+    }
+}
+```
+
+
+
+> LBTAHeaderListController에서 Header부분을 제외한 구현 부분
+
+LBTAListController는 `LBTAListHeaderController<T, U, UICollectionReusableView>` 를 상속한 class이다. Header부분에 `UICollectionReusableView` 을 넣어서 빈 header이다.
 
 ```swift
     open var items = [U]() {
@@ -141,11 +209,13 @@ collectionView.contentInset.top 과 collectionView.scrollIndicatorInsets.top은 
     }
 ```
 
+didSet에는 items가 바뀌면 collectionView를 reload 해준다.
+
 
 
 ### 3. Cell 요소 디자인
 
-cell도 view에 속한다. view처럼 디자인 하면 된다.
+cell도 view에 속하기 때문에 view처럼 디자인 하면 된다.
 
 
 
@@ -254,3 +324,4 @@ extension UIStackView {
 ```
 
  
+
