edit: TIL Oct 18th

--- a/_posts/2019-10-19-TIL-Oct-19th-2019.md
+++ b/_posts/2019-10-19-TIL-Oct-19th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL Oct 18th 2019 - LBTATools을 사용하여 Custom Cell 디자인"
+title: "TIL Oct 19th 2019 - "
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
@@ -108,7 +108,7 @@ class RecentMessageCell: LBTAListCell<UIColor> {
 }
 ```
 
-didSet을호 생성된 item객체들을 모두 처리하여 cell로 만들어준다. collectionViewCell의 view 요소들에 data를 넣어주는 initializer 같은 역할을 한다.
+didSet을호 생성된 item객체들을 모두 처리하여 cell로 만들어준다. collectionViewCell의 initializer 같은 역할을 한다.
 
 
 
@@ -324,3 +324,4 @@ extension UIStackView {
 ```
 
  
+
